# XMRT-Monorepo

./: README.md  feature-flags.ts  hardhat.config.js  package.json  pyproject.toml  tsconfig.base.json
.github/workflows/: build.yml
core/meshnet/src/protocol/: ClusterFormation.cpp
core/mobile-miner/src/thermal/: ThermalConstants.ts  ThermalManager.ts
core/xmrt-token/contracts/: XMRTToken.sol
dao/treasury/contracts/: RevenueModel.sol
docs/: ARCHITECTURE.md
interfaces/dashboard/src/: main.py
