[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmrt-ecosystem"
version = "1.0.0"
description = "XMRT Ecosystem Python Components"
authors = [{name = "XMRT Team", email = "dev@xmrt.org"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "web3>=6.0.0",
    "redis>=4.0.0",
    "celery>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0"
]